# spotify-clone

./: .env.example  .gitignore  README.md  bun.lockb  docker-compose.yml  init.sql  middleware.ts  next.config.mjs  nginx.conf  package.json  types.ts  types_db.ts
actions/: getLikedSongs.ts  getSongs.ts  getSongsByTitle.ts  getSongsByUserId.ts
ai-moderation-service/: k.py  pyproject.toml
ai-moderation-service/app/: config.py  dependencies.py  main.py
ai-moderation-service/app/models/: messaging.py  transcribe_response.py  transcribe_result.py  transcription.py
ai-moderation-service/app/routers/: health.py  transcribe.py
ai-moderation-service/app/services/: file_service_client.py  transcription_publisher.py  whisper_service.py
ai-moderation-service/app/utils/: device.py
ai-transcription-service/: Dockerfile  pyproject.toml
ai-transcription-service/app/: config.py  dependencies.py  main.py
ai-transcription-service/app/models/: healthcheck.py  messaging.py  transcription.py
ai-transcription-service/app/services/: moderation_service.py  transcription_publisher.py  whisper_service.py
ai-transcription-service/app/utils/: device.py  files.py  json_encoder.py  rabbitmq_connection_manager.py  time_utils.py
api/: AuthResponse.ts
app/: layout.tsx
backend/: .dockerignore  backend.sln
components/: AuthModal.tsx  Box.tsx  Header.tsx  Library.tsx  LikeButton.tsx  MediaItem.tsx  PlayerContent.tsx  Sidebar.tsx  Slider.tsx  SongItem.tsx  UploadModal.tsx
email-service/: Dockerfile  go.mod  go.sum
file-service/: Dockerfile  go.mod  go.sum
types/: types.ts
(+1101 files in other folders)
