[project]
name = "ai-transcription-service"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "numpy>=2.4.4",
    "python-multipart>=0.0.27",
    "uvicorn[standard]>=0.46.0",
    "faster-whisper>=1.2.1",
    "better-profanity>=0.7.0",
    "nvidia-ml-py>=13.595.45",
    "aiofiles>=25.1.0",
    "aio-pika>=9.6.2",
]
